# competitive-programming

./: .gitignore  CMakeLists.txt  boilerplate.cpp  compile_flags.txt  input.txt  scratchpad.cpp
.zed/: debug.json
include/bits/: stdc++.h
solutions-archive/: boilerplate.cpp
solutions-archive/codeforces/gym/102951/: a_maximum_distance.cpp  a_maximum_distance.md
solutions-archive/codeforces/problemset/581/: d_three_logos.cpp
solutions-archive/cses/1622/: creating_strings.cpp
solutions-archive/cses/1623/: apple_division.cpp
solutions-archive/cses/1624/: chessboard_and_queens.cpp
solutions-archive/usaco/bronze/2015/dec/: 2_speeding_ticket.cpp  2_speeding_ticket.md
solutions-archive/usaco/bronze/2016/dec/: 2_block_game.cpp  2_block_game.md
solutions-archive/usaco/bronze/2016/feb/: 3_load_balancing.cpp
solutions-archive/usaco/bronze/2017/feb/: 2_why_did_the_cow_cross_the_road_ii.cpp  2_why_did_the_cow_cross_the_road_ii.md
solutions-archive/usaco/bronze/2017/usopen/: 2_bovine_genomics.cpp  2_bovine_genomics.md
solutions-archive/usaco/bronze/2018/dec/: 1_mixing_milk.cpp  1_mixing_milk.md
solutions-archive/usaco/bronze/2019/dec/: 1_cow_gymnastics.cpp  1_cow_gymnastics.md
solutions-archive/usaco/bronze/2019/jan/: 1_shell_game.cpp
solutions-archive/usaco/bronze/2020/usopen/: 3_cowntact_tracing.cpp
solutions-archive/usaco/bronze/2022/feb/: 1_sleeping_in_class.cpp
usaco/bronze/2015/dec/: 2_speeding_ticket.cpp
usaco/bronze/2019/jan/: 1_shell_game.md
usaco/bronze/2020/dec/: 3_stuck_in_a_rut.cpp  3_stuck_in_a_rut.md
(+4 files in other folders)
